Fix categories images on mobile

--- a/style/scss/components/_collection-banner.scss
+++ b/style/scss/components/_collection-banner.scss
@@ -6,6 +6,7 @@
   }
   .collection-item-image {
     position: relative;
+    height: 100vw;
 
     @include md {
       padding-bottom: 140%;
